fixing margins on symbol paragraph on mobile

--- a/laura_css.css
+++ b/laura_css.css
@@ -1805,6 +1805,7 @@ hr.is-style-wide {
     font-style: italic !important;
     margin-bottom: 10px !important;
     font-family: georgia, sans-serif;
+    margin-top:10px;
 }
 
 .lauragreenvillemedia {
